# zkMetal

./: .gitignore  BACKLOG.md  MACBOOK_SETUP.md  Nargo.toml  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT.tex  Package.swift  Prover.toml  README.md  RESEARCH.md  convert_poseidon_constants.py  convert_poseidon_metal.py  convert_poseidon_to_metal.py  debug_compile.swift
Sources/NeonFieldOps/: babybear_batch_neon.c  babybear_ntt.c  babyjubjub_ops.c  batch_field_neon.c  binary_additive_fft.c  binary_tower.c  blake3_neon.c  bls12_377_ops.c  bls12_381_hash_to_curve.c  bls12_381_ops.c  bls12_381_pairing.c  bn254_msm.c  bn254_pairing.c  ccs_ops.c  ed25519_ops.c  goldilocks_batch_ext.c  goldilocks_neon.c  goldilocks_ntt.c  grumpkin_ops.c  jubjub_ops.c  keccak_neon.c  lattice_ntt_neon.c  m31_neon.c  mont256.c  mont256_asm.s  packed_small_field.c  pasta_ntt.c  pasta_ops.c  pasta_poly.c  pasta_poseidon.c  plonk_ops.c  poseidon2_merkle.c  secp256k1_ops.c  small_field_poseidon2.c  spartan_ops.c  stark252_ops.c  whir_fold.c
Sources/NeonFieldOps/include/: NeonFieldOps.h
Sources/Shaders/additive/: additive_fft_gf8.metal
Sources/Shaders/basefold/: basefold_kernels.metal
Sources/Shaders/brakedown/: brakedown_kernels.metal
Sources/Shaders/constraint/: babybear_constraint_fold.metal  circle_constraint_m31.metal  constraint_eval.metal  fused_circle_ntt_constraint.metal  fused_ntt_constraint.metal  goldilocks_constraint_fold.metal
Sources/Shaders/erasure/: reed_solomon.metal
Sources/Shaders/fields/: babybear.metal  batch_field_ops.metal  (+14 more)
Sources/zkMetal/: Tuning.swift  Versions.swift  zkMetal.swift
Sources/zkMetal-ffi/: zkMetal_ffi.swift
Sources/zkMetal-ffi/RustBindings/: Cargo.toml  build.rs
Sources/zkMetal-ffi/RustBindings/src/: lib.rs
Sources/zkbench/: BenchStats.swift  accumulation_bench.swift  asm_bench.swift  babyjubjub_bench.swift  basefold_bench.swift  batch_ecdsa_bench.swift  batch_ed25519_bench.swift  batch_field_bench.swift  batch_transcript_bench.swift  batch_verify_bench.swift  binius_bench.swift  blake3_bench.swift  blake3_neon_bench.swift  blaze_bench.swift  bls12377_ntt_bench.swift  bls12381_bench.swift  bls_sig_bench.swift  brakedown_bench.swift  circle_bench.swift  circle_fri_bench.swift  circle_stark_bench.swift  constraint_bench.swift  correctness_tests.swift  cpu_bench.swift  cq_bench.swift  cq_bench.swift.bak  cq_bench.swift.wip  data_parallel_bench.swift  ecdsa_bench.swift  ed25519_bench.swift  erasure_bench.swift  field_bench.swift  field_ops_bench.swift  folding_bench.swift  fri_bench.swift  fused_constraint_bench.swift  g2_msm_bench.swift  gkr_bench.swift  goldilocks_neon_bench.swift  gpu_kzg_bench.swift  (+52 more)
Sources/zkmsm-cli/: main.swift
Tests/zkMetalTests/: AIRConstraintCompilerTests.swift  AIRDSLTests.swift  AIRTraceGenTests.swift  AdditiveFFTTests.swift  BabyBearSTARKTests.swift  BatchECDSATests.swift  BatchEd25519Tests.swift  BatchKZGTests.swift  BinaryTowerTests.swift  BiniusM3Tests.swift  BlazeTests.swift  BulletproofsTests.swift  CairoTraceTests.swift  CircleSTARKTests.swift  CircomParserTests.swift  ConstraintConverterTests.swift  ConstraintOptimizerTests.swift  CosetDomainTests.swift  CosetLDETests.swift  CustomGateLibraryTests.swift  DASTests.swift  DataParallelTests.swift  EVMPrecompileTests.swift  FflonkTests.swift  FieldTests.swift  GKRTests.swift  GPUAIRCompositionTests.swift  GPUAIRConstraintCompilerTests.swift  GPUAIRTraceValidatorTests.swift  GPUAdditiveFFTTests.swift  GPUBLSAggregateTests.swift  GPUBLSSignatureTests.swift  GPUBabyBearExtensionTests.swift  GPUBabyBearSTARKProverTests.swift  GPUBasefoldProverTests.swift  GPUBatchInverseEngineTests.swift  GPUBatchInverseTests.swift  GPUBatchPCSVerifierTests.swift  GPUBatchTranscriptTests.swift  GPUBiniusBinaryFieldTests.swift  (+204 more)
bindings/: build-ffi.sh
bindings/barretenberg/: CMakeLists.txt  FindZkMetal.cmake  README.md  integration_patch.diff  zkmetal_bb_bridge.cpp  zkmetal_bb_bridge.h  zkmetal_bb_msm.hpp  zkmetal_bb_ntt.hpp
bindings/c/: build.sh  example.c  zkmetal.h  zkmetal.pc.in
bindings/lib/: zkmetal.h
bindings/metallib/: MetalLibLoader.h  MetalLibLoader.m  build_metallib.sh  build_test.sh  test_metallib.m
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: arkworks.rs  bn254.rs  lib.rs  msm.rs  neon.rs  ntt.rs
bindings/rust/zkmetal/: Cargo.toml  build.rs
bindings/rust/zkmetal-sys/: Cargo.toml  build.rs  wrapper.h
bindings/rust/zkmetal-sys/src/: lib.rs
bindings/rust/zkmetal/src/: bls12_381.rs  bn254.rs  hash.rs  lib.rs  msm.rs  ntt.rs  pairing.rs
demo/ios/: Package.swift  README.md
docs/: architecture.md  dependency-graph.md  external-baselines.md  metal-tuning-guide.md  proving-market-feasibility.md
memory/: project_session_20260409.md  project_session_20260409_evening.md
metal/: Package.swift  README.md
noir-prover/: OPTIMIZATION_REPORT.md  README.md  RESEARCH.md
noir-prover/prover/: gen_test_witness.mjs
noir-prover/test/: foundry.toml
paper/: circle_stark_outline.md  outline.md  sections_4_5.tex  sections_6_7_8.tex  sections_circle_stark.tex  usenix-2020-09.sty  zkMetal.tex
prover/: package-lock.json  package.json
prover/src/: cli.ts  engine.ts  index.ts  types.ts  watcher.ts  witness.ts
prover/test/: bb-build-bench.mjs  full-bench.mjs  integration.mjs  parallel-bench.mjs
src/: main.nr
test/: EvmVerifier.t.sol  PersistiaVerifier.t.sol
(+685 files in other folders)
